--- a/.github/workflows/issue-comment-bot.yml
+++ b/.github/workflows/issue-comment-bot.yml
@@ -1,6 +1,7 @@
 name: Issue Comment Checklist Bot
 
 on:
+  branches: master
   issue_comment:
     types: [created]
 
@@ -10,7 +11,6 @@ permissions:
 jobs:
   comment-checklist:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
