Refining Attendance Bot #1

--- a/.github/workflows/attendance-logging-bot.yml
+++ b/.github/workflows/attendance-logging-bot.yml
@@ -1,7 +1,9 @@
-name: Attendance Logger Bot (CSV)
+name: Attendance Logger Bot
 
 on:
-  branches: attendance-bot
+  push:
+    branches:
+      - attendance-bot
   issue_comment:
     types: [created]
 
