--- a/.github/workflows/attendance-logging-bot.yml
+++ b/.github/workflows/attendance-logging-bot.yml
@@ -22,16 +22,16 @@ jobs:
       - name: Extract first name from username
         id: extract_name
         run: |
-          full_name="${{ github.event.comment.user.login }}"
-          first_name="${full_name%%-*}"
+          full_name="${{ .github.event.comment.user.login }}"
+          first_name="${.full_name%%-*}"
           echo "first_name=$first_name" >> $GITHUB_OUTPUT
 
       - name: Check if comment contains /login or /logout command and print welcome message
         id: check_command
         run: |
-          comment="${{ github.event.comment.body }}"
+          comment="${{ .github.event.comment.body }}"
           full_name="Gmanoori"
-          first_name="${full_name%%-*}"
+          first_name="${.full_name%%-*}"
           
           if [[ "$comment" == *"/login"* ]]; then
             echo "command=login" >> $GITHUB_OUTPUT
@@ -118,7 +118,7 @@ jobs:
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add attendance.csv
+          git add attendance.md
           git commit -m "Update attendance for ${{ github.event.comment.user.login }} - ${{ steps.check_command.outputs.command }}"
           git push
         env:
