--- a/.github/workflows/attendance-logging-bot.yml
+++ b/.github/workflows/attendance-logging-bot.yml
@@ -1,8 +1,11 @@
 name: Attendance Logger Bot
 
 on:
-  issues:
-    types: [edited]
+  push:
+    branches:
+      - main
+  issue_comment:
+    types: [created, edited]
 
 permissions:
   contents: write
@@ -18,42 +21,47 @@ jobs:
 
       - name: Extract first name from username
         id: extract_name
+        env:
+          FULL_NAME: ${{ github.event.comment.user.login }}
         run: |
-            full_name="${{ github.event.comment.user.login }}"
-            first_name="${full_name%%-*}"
-            echo "first_name=$first_name" >> $GITHUB_OUTPUT          
-      
+          full_name="$FULL_NAME"
+          first_name="${full_name%%-*}"
+          echo "first_name=$first_name" >> $GITHUB_OUTPUT
+
       - name: Check if comment contains /login or /logout
         id: check_command
+        env:
+          COMMENT_BODY: ${{ github.event.comment.body || '' }}
         run: |
-            comment="${{ github.event.comment.body }}"
-            if [[ "$comment" == *"/login"* ]]; then
-              echo "command=login" >> $GITHUB_OUTPUT
-            elif [[ "$comment" == *"/logout"* ]]; then
-              echo "command=logout" >> $GITHUB_OUTPUT
-            else
-              echo "command=none" >> $GITHUB_OUTPUT
+          comment="$COMMENT_BODY"
+          if [[ "$comment" == *"/login"* ]]; then
+            echo "command=login" >> $GITHUB_OUTPUT
+          elif [[ "$comment" == *"/logout"* ]]; then
+            echo "command=logout" >> $GITHUB_OUTPUT
+          else
+            echo "command=none" >> $GITHUB_OUTPUT
+          fi
 
       - name: Post login comment
         if: steps.check_command.outputs.command == 'login'
         uses: peter-evans/create-or-update-comment@v4
         with:
-          issue-number: 4
-          body: "Welcome $first_name! Your login has been recorded."
+          issue-number: ${{ github.event.issue.number }}
+          body: |
+            Welcome @${{ steps.extract_name.outputs.first_name }}! Your login has been recorded.
 
       - name: Post logout comment
         if: steps.check_command.outputs.command == 'logout'
         uses: peter-evans/create-or-update-comment@v4
         with:
-          issue-number: 4
-          body: "Goodbye $first_name! Your logout has been recorded."
-
+          issue-number: ${{ github.event.issue.number }}
+          body: |
+            Goodbye @${{ steps.extract_name.outputs.first_name }}! Your logout has been recorded.
 
       - name: Post confirmation comment
+        if: steps.check_command.outputs.command != 'none'
         uses: peter-evans/create-or-update-comment@v4
         with:
-          issue-number: 4
+          issue-number: ${{ github.event.issue.number }}
           body: |
-            Completed!
-#            Your time has been logged as **${{ github.event.comment.created_at }}**.
-#  **${{ steps.check_command.outputs.command }}**
+            Completed! Your command **${{ steps.check_command.outputs.command }}** was processed at ${{ github.event.comment.created_at }}.
