--- a/.github/workflows/attendance-logging-bot.yml
+++ b/.github/workflows/attendance-logging-bot.yml
@@ -76,7 +76,7 @@ jobs:
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git add test/attendance.md
-          git commit -m "Update attendance.md with latest changes" || echo "No changes to commit"
+          git commit -m "Update attendance.md with login time" || echo "No changes to commit"
           git push
           git pull origin master
 
@@ -89,6 +89,6 @@ jobs:
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git add test/attendance.md
-          git commit -m "Update attendance.md with latest changes" || echo "No changes to commit"
+          git commit -m "Update attendance.md with logout time" || echo "No changes to commit"
           git push
           git pull origin master
