Refining Attendance Bot - Final (...)

--- a/.github/workflows/attendance-logging-bot.yml
+++ b/.github/workflows/attendance-logging-bot.yml
@@ -79,7 +79,7 @@ jobs:
           FIRST_NAME: ${{ steps.check_command.outputs.first_name }}
           FINAL_DATE: ${{ steps.get_timestamp.outputs.final_date }}
         run: |
-          echo "| $FIRST_NAME | $FINAL_DATE | $LOGIN_TIME | $LOGOUT_TIME |   |" >> test/attendance.md
+          echo "| $FIRST_NAME | $FINAL_DATE | ${{ steps.save_login.outputs.login_time }} | $LOGOUT_TIME |   |" >> test/attendance.md
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git add test/attendance.md
