Refining Attendance Bot - might be final

--- a/.github/workflows/attendance-logging-bot.yml
+++ b/.github/workflows/attendance-logging-bot.yml
@@ -66,6 +66,7 @@ jobs:
             See You Tomorrow, @${{ steps.check_command.outputs.first_name }}! ;) Your logout has been recorded at ${{ steps.get_timestamp.outputs.timestamp }}. 
 
       - name: Save login time
+        id: save_login
         if: steps.check_command.outputs.command == 'login'
         run: |
           echo "login_time=${{ steps.get_timestamp.outputs.timestamp }}" >> $GITHUB_OUTPUT
@@ -74,10 +75,12 @@ jobs:
       - name: Write to attendance.md at logout
         if: steps.check_command.outputs.command == 'logout'
         env:
+          LOGIN_TIME: ${{ steps.save_login.outputs.login_time }}
+          LOGOUT_TIME: ${{ steps.get_timestamp.outputs.timestamp }}
           FIRST_NAME: ${{ steps.check_command.outputs.first_name }}
           FINAL_DATE: ${{ steps.get_timestamp.outputs.final_date }}
         run: |
-          echo "| $FIRST_NAME | $FINAL_DATE | ${{ steps.save_login.outputs.login_time }} | ${{ steps.get_timestamp.outputs.timestamp }} |   |" >> test/attendance.md
+          echo "| $FIRST_NAME | $FINAL_DATE | $LOGIN_TIME | $LOGOUT_TIME |   |" >> test/attendance.md
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git add test/attendance.md
