--- a/.github/workflows/attendance-logging-bot.yml
+++ b/.github/workflows/attendance-logging-bot.yml
@@ -86,7 +86,9 @@ jobs:
           cat test/login_time.txt
           IFS='|' read -r LOGIN_USER LOGIN_DATE LOGIN_TIME < test/login_time.txt
           LOGOUT_TIME=${{ steps.get_timestamp.outputs.timestamp }}
-          echo "| $LOGIN_USER | $LOGIN_DATE | $LOGIN_TIME | $LOGOUT_TIME |   |" >> test/attendance.md
+          diff_sec=$(( $(date -d "today $LOGOUT_TIME" +%s) - $(date -d "today $LOGIN_TIME" +%s) ))
+          work_hours=$(printf "%02d:%02d\n" $((diff_sec/3600)) $(((diff_sec%3600)/60)))
+          echo "| $FIRST_NAME | $FINAL_DATE | $LOGIN_TIME | $LOGOUT_TIME | $work_hours |" >> test/attendance.md
           echo "" > test/login_time.txt
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
