--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.8'
 
 x-airflow-common:
   &airflow-common
-  image: apache/airflow:3.1.6
+  image: apache/airflow:2.11.0
   environment: &airflow-common-env
     AIRFLOW__CORE__EXECUTOR: LocalExecutor
     AIRFLOW__CORE__SQL_ALCHEMY_CONN: postgresql+psycopg2://airflow:airflow@postgres/airflow
@@ -10,6 +10,7 @@ x-airflow-common:
     AIRFLOW__CORE__DAGS_ARE_PAUSED_AT_CREATION: 'true'
     AIRFLOW__CORE__LOAD_EXAMPLES: 'false'
     AIRFLOW__SCHEDULER__ENABLE_HEALTH_CHECK: 'true'
+    AIRFLOW__CORE__AUTH_MANAGER: airflow.providers.fab.auth_manager.fab_auth_manager.FabAuthManager
   volumes:
     - ./dags:/opt/airflow/dags
     - ./data:/opt/airflow/data
@@ -38,6 +39,7 @@ services:
   airflow-webserver:
     <<: *airflow-common
     command: webserver
+    host: host.docker.internal
     ports:
       - 8080:8080
     healthcheck:
@@ -67,9 +69,10 @@ services:
           printf "%04d%04d%04d%04d" $${1//./ }
         }
         airflowdb_version=$$(airflow version)
-        airflowdb_expected_version=2.9.0
+        airflowdb_expected_version=2.11.0
         if [[ -z "${airflowdb_version}" || "$(ver $${airflowdb_version})" -lt "$(ver $${airflowdb_expected_version})" ]]; then
-          airflow db migrate
+          airflow db init
+          airflow users re
           airflow users create \
             --username admin \
             --firstname Admin \
