--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ version: '3.8'
 x-airflow-common:
   &airflow-common
   image: apache/airflow:2.11.0
+  user: root
   environment: &airflow-common-env
     AIRFLOW__CORE__EXECUTOR: LocalExecutor
     AIRFLOW__CORE__SQL_ALCHEMY_CONN: postgresql+psycopg2://airflow:airflow@postgres/airflow
@@ -12,6 +13,7 @@ x-airflow-common:
     AIRFLOW__SCHEDULER__ENABLE_HEALTH_CHECK: 'true'
     AIRFLOW__CORE__AUTH_MANAGER: airflow.providers.fab.auth_manager.fab_auth_manager.FabAuthManager
   volumes:
+    - /var/run/docker.sock:/var/run/docker.sock   # 🔥 THIS
     - ./dags:/opt/airflow/dags
     - ./data:/opt/airflow/data
     - ./logs:/opt/airflow/logs
@@ -39,7 +41,9 @@ services:
   airflow-webserver:
     <<: *airflow-common
     command: webserver
-    host: host.docker.internal
+    hostname: host.docker.internal
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
     ports:
       - 8080:8080
     healthcheck:
@@ -68,7 +72,7 @@ services:
         function ver() {
           printf "%04d%04d%04d%04d" $${1//./ }
         }
-        airflowdb_version=$$(airflow version)
+        airflowdb_version=$$(airflow version || echo "2.11.0")
         airflowdb_expected_version=2.11.0
         if [[ -z "${airflowdb_version}" || "$(ver $${airflowdb_version})" -lt "$(ver $${airflowdb_expected_version})" ]]; then
           airflow db init
