--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -99,7 +99,7 @@ services:
       - SPARK_MODE=client
     volumes:
       - ./spark-jars:/opt/spark-jars:ro
-      - ./data:/opt/spark/data
+      - ./data:/opt/airflow/data
     command: tail -f /dev/null  # Keep container alive
     working_dir: /opt/spark
     ports:
